depr/p1/sample_tests/pos/newArray.java
class Base{
	public static void main(String[] args){
		boolean b = new int[10][3725][99302][1+3];
	}
}
