depr/p1/sample_tests/neg/comment2.java
class Comment2Incorrect{
	/* This is a comment *//
	public static void main(String[] args){
	}
}
